--- a/Solution1/VLTPlugin/VLTPlugin.csproj
+++ b/Solution1/VLTPlugin/VLTPlugin.csproj
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>C:\ProgramData\Autodesk\Vault 2017\Extensions\VLTPlugin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;VLT2017</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -45,6 +45,9 @@
     </Reference>
     <Reference Include="Autodesk.DataManagement.Client.Framework">
       <HintPath>C:\Program Files\Autodesk\Vault Professional 2017\Explorer\Autodesk.DataManagement.Client.Framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Autodesk.DataManagement.Client.Framework.Forms">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Autodesk\Vault Professional 2017\Explorer\Autodesk.DataManagement.Client.Framework.Forms.dll</HintPath>
     </Reference>
     <Reference Include="Autodesk.DataManagement.Client.Framework.Vault">
       <HintPath>C:\Program Files\Autodesk\Vault Professional 2017\Explorer\Autodesk.DataManagement.Client.Framework.Vault.dll</HintPath>
@@ -75,6 +78,7 @@
     </Compile>
     <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VaultManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Controls\SomeWinControl.resx">
@@ -92,6 +96,10 @@
     <ProjectReference Include="..\Controls\Controls.csproj">
       <Project>{bf32f51d-2d1b-4f90-a9b5-db81befdb143}</Project>
       <Name>Controls</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VLTPlugin.Interface\VLTPlugin.Infrastructure.csproj">
+      <Project>{809653cf-39b3-4b1c-9b9f-782482bc50d9}</Project>
+      <Name>VLTPlugin.Infrastructure</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
